--- a/tme-04/tme-04-MA Peiran_ZHOU Runlin.ipynb
+++ b/tme-04/tme-04-MA Peiran_ZHOU Runlin.ipynb
@@ -748,17 +748,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crossval(X, Y, n_iterations, iteration):\n",
-    "    np.random.seed(42)\n",
+    "def crossval(X, Y, n_iterations, iteration, init_seed=42):\n",
+    "    np.random.seed(init_seed)\n",
     "    index = np.random.permutation(len(X))\n",
-    "    Xtest = np.asarray([ X[j] for j in range(int(len(X)*iteration/n_iterations),int(len(X)*(iteration+1)/n_iterations))])\n",
-    "    Ytest = np.asarray([ Y[j] for j in range(int(len(Y)*iteration/n_iterations),int(len(Y)*(iteration+1)/n_iterations))])\n",
-    "    Xapp = np.asarray([ X[j] for j in range(0,int(len(X)*iteration/n_iterations))]+[ X[j] for j in range(int(len(X)*(iteration+1)/n_iterations),len(X))])\n",
-    "    Yapp = np.asarray([ Y[j] for j in range(0,int(len(Y)*iteration/n_iterations))]+[ Y[j] for j in range(int(len(Y)*(iteration+1)/n_iterations),len(Y))])\n",
+    "    Xtest = np.asarray([ X[index[j]] for j in range(int(len(X)*iteration/n_iterations),int(len(X)*(iteration+1)/n_iterations))])\n",
+    "    Ytest = np.asarray([ Y[index[j]] for j in range(int(len(Y)*iteration/n_iterations),int(len(Y)*(iteration+1)/n_iterations))])\n",
+    "    Xapp = np.asarray([ X[index[j]] for j in range(0,int(len(X)*iteration/n_iterations))]+[ X[index[j]] for j in range(int(len(X)*(iteration+1)/n_iterations),len(X))])\n",
+    "    Yapp = np.asarray([ Y[index[j]] for j in range(0,int(len(Y)*iteration/n_iterations))]+[ Y[index[j]] for j in range(int(len(Y)*(iteration+1)/n_iterations),len(Y))])\n",
     "    return Xapp, Yapp, Xtest, Ytest\n",
     "\n"
    ]
@@ -772,40 +772,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========== ITERATION :  0  ==========\n",
-      " Xapp= [ 6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23] \n",
-      " Yapp= [ 6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23] \n",
-      " Xtest= [0 1 2 3 4 5] \n",
-      " Ytest= [0 1 2 3 4 5]\n",
-      "========== ITERATION :  1  ==========\n",
-      " Xapp= [ 0  1  2  3  4  5 12 13 14 15 16 17 18 19 20 21 22 23] \n",
-      " Yapp= [ 0  1  2  3  4  5 12 13 14 15 16 17 18 19 20 21 22 23] \n",
-      " Xtest= [ 6  7  8  9 10 11] \n",
-      " Ytest= [ 6  7  8  9 10 11]\n",
-      "========== ITERATION :  2  ==========\n",
-      " Xapp= [ 0  1  2  3  4  5  6  7  8  9 10 11 18 19 20 21 22 23] \n",
-      " Yapp= [ 0  1  2  3  4  5  6  7  8  9 10 11 18 19 20 21 22 23] \n",
-      " Xtest= [12 13 14 15 16 17] \n",
-      " Ytest= [12 13 14 15 16 17]\n",
-      "========== ITERATION :  3  ==========\n",
-      " Xapp= [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17] \n",
-      " Yapp= [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17] \n",
-      " Xtest= [18 19 20 21 22 23] \n",
-      " Ytest= [18 19 20 21 22 23]\n",
-      "\n",
-      "*********************\n",
-      "Et on peut rappeler la fonction avec 0 par exemple: \n",
-      " Xapp= [ 6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23] \n",
-      " Yapp= [ 6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23] \n",
-      " Xtest= [0 1 2 3 4 5] \n",
-      " Ytest= [0 1 2 3 4 5]\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/3x/x67dqh9d0mg480z7jv6vc45h0000gn/T/ipykernel_5839/1185918068.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m24\u001b[0m  \u001b[0;31m# Nombre d'exemples dans le dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mXjouet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mYjouet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXjouet\u001b[0m  \u001b[0;31m# Yjouet est identique à Xjouet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -1149,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
