--- a/tme-04/tme-04-MA Peiran_ZHOU Runlin.ipynb
+++ b/tme-04/tme-04-MA Peiran_ZHOU Runlin.ipynb
@@ -271,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2a25b3cebe0>"
+       "<matplotlib.legend.Legend at 0x1a42908fca0>"
       ]
      },
      "execution_count": 5,
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,16 +406,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init perceptron biais: w=  [0. 0.]  learning rate=  0.005\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2a25b3790a0>"
+       "<matplotlib.legend.Legend at 0x1a42903a4c0>"
       ]
      },
      "execution_count": 7,
@@ -612,16 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a25c211fa0>"
+       "<matplotlib.collections.PathCollection at 0x1a429185df0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -748,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,18 +765,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/3x/x67dqh9d0mg480z7jv6vc45h0000gn/T/ipykernel_5839/1185918068.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m24\u001b[0m  \u001b[0;31m# Nombre d'exemples dans le dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mXjouet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mYjouet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXjouet\u001b[0m  \u001b[0;31m# Yjouet est identique à Xjouet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== ITERATION :  0  ==========\n",
+      " Xapp= [13  1 21  5  2 12 15  3  4 22 17 20 23  7 10 14 19  6] \n",
+      " Yapp= [13  1 21  5  2 12 15  3  4 22 17 20 23  7 10 14 19  6] \n",
+      " Xtest= [ 8 16  0 18 11  9] \n",
+      " Ytest= [ 8 16  0 18 11  9]\n",
+      "========== ITERATION :  1  ==========\n",
+      " Xapp= [ 8 16  0 18 11  9 15  3  4 22 17 20 23  7 10 14 19  6] \n",
+      " Yapp= [ 8 16  0 18 11  9 15  3  4 22 17 20 23  7 10 14 19  6] \n",
+      " Xtest= [13  1 21  5  2 12] \n",
+      " Ytest= [13  1 21  5  2 12]\n",
+      "========== ITERATION :  2  ==========\n",
+      " Xapp= [ 8 16  0 18 11  9 13  1 21  5  2 12 23  7 10 14 19  6] \n",
+      " Yapp= [ 8 16  0 18 11  9 13  1 21  5  2 12 23  7 10 14 19  6] \n",
+      " Xtest= [15  3  4 22 17 20] \n",
+      " Ytest= [15  3  4 22 17 20]\n",
+      "========== ITERATION :  3  ==========\n",
+      " Xapp= [ 8 16  0 18 11  9 13  1 21  5  2 12 15  3  4 22 17 20] \n",
+      " Yapp= [ 8 16  0 18 11  9 13  1 21  5  2 12 15  3  4 22 17 20] \n",
+      " Xtest= [23  7 10 14 19  6] \n",
+      " Ytest= [23  7 10 14 19  6]\n",
+      "\n",
+      "*********************\n",
+      "Et on peut rappeler la fonction avec 0 par exemple: \n",
+      " Xapp= [13  1 21  5  2 12 15  3  4 22 17 20 23  7 10 14 19  6] \n",
+      " Yapp= [13  1 21  5  2 12 15  3  4 22 17 20 23  7 10 14 19  6] \n",
+      " Xtest= [ 8 16  0 18 11  9] \n",
+      " Ytest= [ 8 16  0 18 11  9]\n"
      ]
     }
    ],
@@ -817,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -842,19 +857,19 @@
      "output_type": "stream",
      "text": [
       "========== ITERATION :  0  ==========\n",
-      " Xapp= [ 4  5  6  7  8  9 10 11 16 17 18 19 20 21 22 23] \n",
+      " Xapp= [ 5  2  1 11  4  7  3  6 17 14 13 23 16 19 15 18] \n",
       " Yapp= [-1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1] \n",
-      " Xtest= [ 0  1  2  3 12 13 14 15] \n",
+      " Xtest= [10  9  0  8 22 21 12 20] \n",
       " Ytest= [-1 -1 -1 -1  1  1  1  1]\n",
       "========== ITERATION :  1  ==========\n",
-      " Xapp= [ 0  1  2  3  8  9 10 11 12 13 14 15 20 21 22 23] \n",
+      " Xapp= [10  9  0  8  4  7  3  6 22 21 12 20 16 19 15 18] \n",
       " Yapp= [-1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1] \n",
-      " Xtest= [ 4  5  6  7 16 17 18 19] \n",
+      " Xtest= [ 5  2  1 11 17 14 13 23] \n",
       " Ytest= [-1 -1 -1 -1  1  1  1  1]\n",
       "========== ITERATION :  2  ==========\n",
-      " Xapp= [ 0  1  2  3  4  5  6  7 12 13 14 15 16 17 18 19] \n",
+      " Xapp= [10  9  0  8  5  2  1 11 22 21 12 20 17 14 13 23] \n",
       " Yapp= [-1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1] \n",
-      " Xtest= [ 8  9 10 11 20 21 22 23] \n",
+      " Xtest= [ 4  7  3  6 16 19 15 18] \n",
       " Ytest= [-1 -1 -1 -1  1  1  1  1]\n"
      ]
     }
@@ -885,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -893,19 +908,19 @@
      "output_type": "stream",
      "text": [
       "========== ITERATION :  0  ==========\n",
-      " Xapp= [ 1  5  2  3  4  7 10  6 12 15 22 17 20 23 14 19] \n",
+      " Xapp= [ 5 11  0  6  1  3  9  2 15 13 18 19 12 17 21 22] \n",
       " Yapp= [-1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1] \n",
-      " Xtest= [ 8  0 11  9 16 18 13 21] \n",
+      " Xtest= [10  7  8  4 14 23 16 20] \n",
       " Ytest= [-1 -1 -1 -1  1  1  1  1]\n",
       "========== ITERATION :  1  ==========\n",
-      " Xapp= [ 8  0 11  9  4  7 10  6 16 18 13 21 20 23 14 19] \n",
+      " Xapp= [10  7  8  4  1  3  9  2 14 23 16 20 12 17 21 22] \n",
       " Yapp= [-1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1] \n",
-      " Xtest= [ 1  5  2  3 12 15 22 17] \n",
+      " Xtest= [ 5 11  0  6 15 13 18 19] \n",
       " Ytest= [-1 -1 -1 -1  1  1  1  1]\n",
       "========== ITERATION :  2  ==========\n",
-      " Xapp= [ 8  0 11  9  1  5  2  3 16 18 13 21 12 15 22 17] \n",
+      " Xapp= [10  7  8  4  5 11  0  6 14 23 16 20 15 13 18 19] \n",
       " Yapp= [-1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1] \n",
-      " Xtest= [ 4  7 10  6 20 23 14 19] \n",
+      " Xtest= [ 1  3  9  2 12 17 21 22] \n",
       " Ytest= [-1 -1 -1 -1  1  1  1  1]\n"
      ]
     }
@@ -939,24 +954,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Itération  0 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.85\n",
-      "Itération  1 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 1.0\n",
-      "Itération  2 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.95\n",
+      "Itération  0 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.95\n",
+      "Itération  1 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.9\n",
+      "Itération  2 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.9\n",
       "Itération  3 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.9\n",
-      "Itération  4 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.85\n",
-      "Itération  5 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.85\n",
+      "Itération  4 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.95\n",
+      "Itération  5 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.95\n",
       "Itération  6 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.9\n",
       "Itération  7 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.8\n",
-      "Itération  8 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.95\n",
-      "Itération  9 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.9\n",
-      "Perf  [0.85, 1.0, 0.95, 0.9, 0.85, 0.85, 0.9, 0.8, 0.95, 0.9]\n"
+      "Itération  8 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.9\n",
+      "Itération  9 : taille base app.= 180 taille base test= 20 Taux de bonne classif: 0.8\n",
+      "Perf  [0.95, 0.9, 0.9, 0.9, 0.95, 0.95, 0.9, 0.8, 0.9, 0.8]\n"
      ]
     }
    ],
@@ -995,24 +1010,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Itération  0 : taille base app.= 1008 taille base test= 111 Taux de bonne classif: 0.9819819819819819\n",
-      "Itération  1 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 1.0\n",
+      "Itération  0 : taille base app.= 1008 taille base test= 111 Taux de bonne classif: 0.972972972972973\n",
+      "Itération  1 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9910714285714286\n",
       "Itération  2 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9821428571428571\n",
       "Itération  3 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 1.0\n",
-      "Itération  4 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 1.0\n",
-      "Itération  5 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9821428571428571\n",
+      "Itération  4 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9910714285714286\n",
+      "Itération  5 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9910714285714286\n",
       "Itération  6 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9910714285714286\n",
-      "Itération  7 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 1.0\n",
+      "Itération  7 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9910714285714286\n",
       "Itération  8 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9910714285714286\n",
-      "Itération  9 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 0.9732142857142857\n",
-      "Perf obtenues :  [0.9819819819819819, 1.0, 0.9821428571428571, 1.0, 1.0, 0.9821428571428571, 0.9910714285714286, 1.0, 0.9910714285714286, 0.9732142857142857]\n"
+      "Itération  9 : taille base app.= 1007 taille base test= 112 Taux de bonne classif: 1.0\n",
+      "Perf obtenues :  [0.972972972972973, 0.9910714285714286, 0.9821428571428571, 1.0, 0.9910714285714286, 0.9910714285714286, 0.9910714285714286, 0.9910714285714286, 0.9910714285714286, 1.0]\n"
      ]
     }
    ],
@@ -1070,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,16 +1099,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8950000000000001, 0.05678908345800272)"
+       "(0.9901544401544402, 0.007471971498511386)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,13 +1117,6 @@
     "# Sur les résultats obtenus dans la boîte précédemment:\n",
     "analyse_perfs(perf)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1127,7 +1135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
